--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.9",
+    "cache-manager": "^7.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
+    "keyv": "^5.5.1",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
